--- a/about.html
+++ b/about.html
@@ -50,6 +50,29 @@
             </p>
     </section>
 
+        <!-- Contact Section Code -->
+
+    <section class="contact" id="contact">
+
+        <h2 class="heading">Contact <span>Me</span></h2>
+
+        <form action="#">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email Address">
+            </div>
+            <div class="input-box">
+                <input type="text" placeholder="Phone Number">
+                <input type="text" placeholder="Email Subject">
+            </div>
+
+            <textarea name="message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+
+            <input type="submit" value="Send Message" class="btn">
+        </form>
+
+    </section>
+
     <!-- Footer Section Code -->
 
     <footer class="footer">
