--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Pengalaman - Faza</title>
+    <title>Experience - Faza</title>
 </head>
 
 <body>
@@ -80,6 +80,14 @@
         <li>
             <strong>Juara 3 Olimpiade Bahasa Inggris Tingkat Nasional</strong> (2022)<br>
             Meraih juara 3 dalam Olimpiade Bahasa Inggris tingkat nasional, yang menguji keterampilan bahasa Inggris baik secara lisan maupun tulisan. 
+        </li>
+        <li>
+            <strong>Juara 2 Olimpiade Astronomi Tingkat Nasional</strong> (2021)<br>
+            Berhasil meraih juara 2 dalam Olimpiade Astronomi tingkat nasional. Kompetisi ini menantang kemampuan memahami fenomena alam semesta, termasuk fisika benda langit, sistem tata surya, dan kosmologi. 
+        </li>
+        <li>
+            <strong>Juara 3 Olimpiade Sosiologi Tingkat Nasional</strong> (2021)<br>
+            Meraih juara 3 dalam Olimpiade Sosiologi tingkat nasional, yang menekankan analisis mendalam tentang fenomena sosial, budaya, dan masyarakat. 
         </li>
         <li>
             <strong>Juara 2 Lomba Tari Tradisional</strong> (2019)<br>
